# cognisense-backend

./: .env.example  .gitignore  README.md  SETUP_COMPLETE.md  pyproject.toml  tables.sql
app/api/v1/: categories.py  router.py  user_domain_category.py
app/api/v1/auth/: auth.py
docs/: API_DASHBOARD.md  API_DOCUMENTATION.md
