[tool.poetry]
name = "cognisense-backend"
version = "0.1.0"
description = ""
authors = ["DhruvPokhriyal <171908255+DhruvPokhriyal@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
transformers = ">=4.57.1,<5.0.0"
fastapi = {extras = ["standard"], version = "^0.121.1"}
